Fixed weird navbar spacing issue
Also added change to blog template css and scss

--- a/blog/blogPosts/Post_3/blogPost.scss
+++ b/blog/blogPosts/Post_3/blogPost.scss
@@ -25,11 +25,12 @@ a#logo-navbar-img > img {
   width: 35px;
 }
 // ======================== links and lists css ============================ //
-li {
+.postContent li {
   list-style: disc outside none;
   display: list-item;
   margin-left: 2em;
 }
+
 /* unvisited link */
 a {
   text-decoration: none;
